# aws-throwaway

./: Cargo.toml  deny.toml  readme.md  rust-toolchain.toml
.github/workflows/: build_and_test.yaml  license_check.yaml  release.yaml
aws-throwaway/: Cargo.toml
aws-throwaway/examples/: aws-throwaway-test-large-file.rs  aws-throwaway-test-multiple-instances.rs  aws-throwaway-test.rs  create-instance.rs
aws-throwaway/src/: ec2_instance.rs  ec2_instance_definition.rs  iam.rs  lib.rs  ssh.rs  tags.rs
aws-throwaway/src/backend/: mod.rs
aws-throwaway/src/backend/cli/: instance_type.rs  mod.rs  placement_strategy.rs
aws-throwaway/src/backend/sdk/: aws.rs  cpu_arch.rs  iam.rs  mod.rs  tags.rs
