[package]
name = "aws-throwaway"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shotover/aws-throwaway"
description = "An aws-sdk wrapper to spin up temporary resources."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_sdk = ["aws-sdk-ec2", "aws-sdk-iam", "aws-sdk-sts", "aws-config"]
default = ["use_sdk"]

[dependencies]
aws-sdk-ec2 = { version = "1.1.0", optional = true }
aws-sdk-iam = { version = "1.1.0", optional = true }
aws-sdk-sts = { version = "1.1.0", optional = true }
aws-config = { version = "1.0.0", optional = true }
russh = "0.40.0"
russh-keys = "0.40.0"
base64 = "0.21.2"
ssh-key = { version = "0.6.1", features = ["ed25519"] }
tokio = { version = "1.25.0", features = ["full", "macros"] }
anyhow = "1.0.42"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
tracing = "0.1.15"
async-trait = "0.1.30"
# TODO: avoid pulling in these dependencies when use_sdk is enabled,
#       will need to introduce a use_cli feature to do so
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
futures = "0.3.30"

[dev-dependencies]
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
tracing-appender = "0.2.0"
clap = { version = "4.0.4", features = ["cargo", "derive"] }
